--- a/webpage/example-notebooks/ramped_molmer_sorensen.ipynb
+++ b/webpage/example-notebooks/ramped_molmer_sorensen.ipynb
@@ -15,7 +15,16 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling IonSim [511e77fe-ab93-41f7-8f07-8f89809c6435]\n",
+      "└ @ Base loading.jl:1342\n"
+     ]
+    }
+   ],
    "source": [
     "using QuantumOptics\n",
     "using IonSim\n",
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "Collapsed": "false"
    },
@@ -116,21 +125,19 @@
      "output_type": "stream",
      "text": [
       "┌ Warning: Some ions point to the same thing. Making copies.\n",
-      "└ @ IonSim /home/neil/.julia/dev/IonSim/src/ion_configurations.jl:161\n"
+      "└ @ IonSim /home/neil/.julia/dev/IonSim/src/iontraps.jl:161\n"
      ]
     }
    ],
    "source": [
     "# Construct the system\n",
-    "C = Ca40([(\"S1/2\", -1/2), (\"D5/2\", -1/2)])\n",
-    "set_sublevel_alias!(C, Dict(\"S\" => (\"S1/2\", -1/2),\n",
-    "                            \"D\" => (\"D5/2\", -1/2)))\n",
-    "L1 = Laser(pointing=[(1, 1.), (2, 1.)])\n",
-    "L2 = Laser(pointing=[(1, 1.), (2, 1.)])\n",
+    "ca = Ca40([(\"S1/2\", -1/2, \"S\"), (\"D5/2\", -1/2, \"D\")])\n",
+    "laser1 = Laser(pointing=[(1, 1.), (2, 1.)])\n",
+    "laser2 = Laser(pointing=[(1, 1.), (2, 1.)])\n",
     "chain = LinearChain(\n",
-    "        ions=[C, C], com_frequencies=(x=3e6,y=3e6,z=2.5e5), vibrational_modes=(;z=[1])\n",
+    "        ions=[ca, ca], comfrequencies=(x=3e6,y=3e6,z=2.5e5), selectedmodes=(;z=[1])\n",
     "    )\n",
-    "T = Trap(configuration=chain, B=6e-4, Bhat=(x̂ + ẑ)/√2, lasers=[L1, L2]);"
+    "chamber = Chamber(iontrap=chain, B=6e-4, Bhat=(x̂ + ẑ)/√2, lasers=[laser1, laser2]);"
    ]
   },
   {
@@ -144,31 +151,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "mode = T.configuration.vibrational_modes.z[1]\n",
+    "mode = zmodes(chamber)[1]\n",
+    "ν = frequency(mode)\n",
     "\n",
     "ϵ = 10e3\n",
     "d = 350 # corrects for AC stark shift from single-photon coupling to sidebands\n",
     "\n",
-    "L1.λ = transitionwavelength(C, (\"S\", \"D\"), T)\n",
-    "L1.Δ = mode.ν + ϵ - d\n",
-    "L1.k = ẑ\n",
-    "L1.ϵ = x̂\n",
+    "wavelength_from_transition!(laser1, ca, (\"S\", \"D\"), chamber)\n",
+    "detuning!(laser1, ν + ϵ - d)\n",
+    "polarization!(laser1, x̂)\n",
+    "wavevector!(laser1, ẑ)\n",
     "\n",
-    "L2.λ = transitionwavelength(C, (\"S\", \"D\"), T)\n",
-    "L2.Δ = -mode.ν - ϵ + d\n",
-    "L2.k = ẑ\n",
-    "L2.ϵ = x̂\n",
+    "wavelength_from_transition!(laser2, ca, (\"S\", \"D\"), chamber)\n",
+    "detuning!(laser2, -ν - ϵ + d)\n",
+    "polarization!(laser2, x̂)\n",
+    "wavevector!(laser2, ẑ)\n",
     "\n",
-    "η = abs(get_η(mode, L1, C))\n",
+    "η = abs(lambdicke(mode, ca, laser1))\n",
     "pi_time = η / ϵ  # setting 'resonance' condition: ηΩ = 1/2ϵ\n",
-    "Efield_from_pi_time!(pi_time, T, 1, 1, (\"S\", \"D\"))\n",
-    "Efield_from_pi_time!(pi_time, T, 2, 1, (\"S\", \"D\"));"
+    "intensity_from_pitime!(1, pi_time, 1, (\"S\", \"D\"), chamber)\n",
+    "intensity_from_pitime!(2, pi_time, 1, (\"S\", \"D\"), chamber);"
    ]
   },
   {
@@ -182,19 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
     "# setup the Hamiltonian\n",
-    "h = hamiltonian(T, lamb_dicke_order=1, rwa_cutoff=Inf);"
+    "h = hamiltonian(chamber, timescale=1e-6, lamb_dicke_order=1, rwa_cutoff=Inf);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "Collapsed": "false"
    },
@@ -203,13 +211,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 59.341403 seconds (43.17 M allocations: 3.149 GiB, 3.86% gc time, 0.53% compilation time)\n"
+      "  0.473047 seconds (2.94 M allocations: 104.585 MiB, 8.98% gc time)\n"
      ]
     }
    ],
    "source": [
     "# solve system\n",
-    "@time tout, sol = timeevolution.schroedinger_dynamic(0:0.1:210, C[\"S\"] ⊗ C[\"S\"] ⊗ mode[0], h);"
+    "@time tout, sol = timeevolution.schroedinger_dynamic(0:0.1:210, ca[\"S\"] ⊗ ca[\"S\"] ⊗ mode[0], h);"
    ]
   },
   {
@@ -223,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {
     "Collapsed": "false",
     "scrolled": false
@@ -238,32 +246,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/neil/miniconda3/envs/sims/lib/python3.8/site-packages/numpy/core/_asarray.py:85: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  return array(a, dtype, copy=False, order=order)\n",
-      "/home/neil/miniconda3/envs/sims/lib/python3.8/site-packages/numpy/core/_asarray.py:85: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  return array(a, dtype, copy=False, order=order)\n",
-      "/home/neil/miniconda3/envs/sims/lib/python3.8/site-packages/numpy/core/_asarray.py:85: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  return array(a, dtype, copy=False, order=order)\n",
-      "/home/neil/miniconda3/envs/sims/lib/python3.8/site-packages/numpy/core/_asarray.py:85: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  return array(a, dtype, copy=False, order=order)\n",
-      "/home/neil/miniconda3/envs/sims/lib/python3.8/site-packages/numpy/core/_asarray.py:85: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  return array(a, dtype, copy=False, order=order)\n",
-      "findfont: Font family ['Palatino'] not found. Falling back to DejaVu Sans.\n",
-      "findfont: Font family ['Palatino'] not found. Falling back to DejaVu Sans.\n"
-     ]
     }
    ],
    "source": [
-    "SS = ionprojector(T, \"S\", \"S\") \n",
-    "DD = ionprojector(T, \"D\", \"D\")\n",
-    "SD = ionprojector(T, \"S\", \"D\")\n",
-    "DS = ionprojector(T, \"D\", \"S\")\n",
-    "bell_state = dm((C[\"S\"] ⊗ C[\"S\"] + 1im * C[\"D\"] ⊗ C[\"D\"])/√2) ⊗ one(mode)\n",
+    "SS = ionprojector(chamber, \"S\", \"S\") \n",
+    "DD = ionprojector(chamber, \"D\", \"D\")\n",
+    "SD = ionprojector(chamber, \"S\", \"D\")\n",
+    "DS = ionprojector(chamber, \"D\", \"S\")\n",
+    "bell_state = dm((ca[\"S\"] ⊗ ca[\"S\"] + 1im * ca[\"D\"] ⊗ ca[\"D\"])/√2) ⊗ one(mode)\n",
     "\n",
     "# compute expectation values\n",
     "prob_SS = expect(SS, sol)  # 𝔼(|S⟩|S⟩)\n",
@@ -304,14 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "L1.ϕ = -π/2\n",
-    "L2.ϕ = π/2;"
+    "phase!(laser1, -π/2)\n",
+    "phase!(laser2, π/2);"
    ]
   },
   {
@@ -325,18 +315,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "h = hamiltonian(T, lamb_dicke_order=1, rwa_cutoff=Inf);"
+    "h = hamiltonian(chamber, timescale=1e-6, lamb_dicke_order=1, rwa_cutoff=Inf);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {
     "Collapsed": "false"
    },
@@ -345,12 +335,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.507648 seconds (3.24 M allocations: 115.249 MiB, 23.79% gc time)\n"
+      "  0.396818 seconds (3.24 M allocations: 115.232 MiB, 9.90% gc time)\n"
      ]
     }
    ],
    "source": [
-    "@time tout, sol = timeevolution.schroedinger_dynamic(0:0.1:210, C[\"S\"] ⊗ C[\"S\"] ⊗ mode[0], h);"
+    "@time tout, sol = timeevolution.schroedinger_dynamic(0:0.1:210, ca[\"S\"] ⊗ ca[\"S\"] ⊗ mode[0], h);"
    ]
   },
   {
@@ -364,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "Collapsed": "false"
    },
@@ -420,16 +410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "E = Efield_from_pi_time(pi_time, T, 1, 1, (\"S\", \"D\"))\n",
+    "I = intensity_from_pitime(1, pi_time, 1, (\"S\", \"D\"), chamber)\n",
     "# Simple amplitude ramping function\n",
-    "Ω = t -> t < 20 ? E * sin(2π * t / 80)^2 : E\n",
-    "L1.E = L2.E = t -> Ω(t);"
+    "Ω = t -> t < 20 ? sin(2π * t / 80)^2 : 1\n",
+    "\n",
+    "intensity!(laser1, t -> I*Ω(t)^2)\n",
+    "intensity!(laser2, t -> I*Ω(t)^2);"
    ]
   },
   {
@@ -443,18 +435,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "h = hamiltonian(T, lamb_dicke_order=1, rwa_cutoff=Inf);"
+    "h = hamiltonian(chamber, timescale=1e-6, lamb_dicke_order=1, rwa_cutoff=Inf);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {
     "Collapsed": "false"
    },
@@ -463,12 +455,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.604466 seconds (4.92 M allocations: 149.285 MiB, 9.27% gc time, 8.00% compilation time)\n"
+      "  0.794465 seconds (5.62 M allocations: 159.405 MiB, 10.27% gc time, 4.17% compilation time)\n"
      ]
     }
    ],
    "source": [
-    "@time tout, sol = timeevolution.schroedinger_dynamic(0:0.1:220, C[\"S\"] ⊗ C[\"S\"] ⊗ mode[0], h);"
+    "@time tout, sol = timeevolution.schroedinger_dynamic(0:0.1:220, ca[\"S\"] ⊗ ca[\"S\"] ⊗ mode[0], h);"
    ]
   },
   {
@@ -482,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {
     "Collapsed": "false"
    },
@@ -513,7 +505,7 @@
     "plt.plot(tout, prob_DS, label=\"DS\")\n",
     "plt.plot(tout, prob_bell, label=\"Bell state\")\n",
     "plt.plot(\n",
-    "        tout, @.(Ω(tout) / 2E), \n",
+    "        tout, @.(Ω(tout) / 2), \n",
     "        linestyle=\"--\", label=\"scaled ramp\"\n",
     "    )\n",
     "plt.xlim(tout[1], tout[end])\n",
