--- a/webpage/example-notebooks/two_ion_vaet.ipynb
+++ b/webpage/example-notebooks/two_ion_vaet.ipynb
@@ -15,16 +15,7 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Precompiling IonSim [511e77fe-ab93-41f7-8f07-8f89809c6435]\n",
-      "└ @ Base loading.jl:1342\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using QuantumOptics\n",
     "using IonSim\n",
@@ -139,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "Collapsed": "false"
    },
@@ -149,28 +140,24 @@
      "output_type": "stream",
      "text": [
       "┌ Warning: Some ions point to the same thing. Making copies.\n",
-      "└ @ IonSim /home/neil/.julia/dev/IonSim/src/ion_configurations.jl:161\n"
+      "└ @ IonSim /home/neil/.julia/dev/IonSim/src/iontraps.jl:161\n"
      ]
     }
    ],
    "source": [
-    "C = Ca40([(\"S1/2\", -1/2), (\"D5/2\", -1/2)])\n",
-    "set_sublevel_alias!(C, Dict(\"S\" => (\"S1/2\", -1/2),\n",
-    "                            \"D\" => (\"D5/2\", -1/2)))\n",
-    "L1 = Laser(pointing=[(1, 1.), (2, 1.)])\n",
-    "L2 = Laser(pointing=[(1, 1.), (2, 1.)])\n",
+    "ca = Ca40([(\"S1/2\", -1/2, \"S\"), (\"D5/2\", -1/2, \"D\")])\n",
+    "laser1 = Laser(pointing=[(1, 1.), (2, 1.)])\n",
+    "laser2 = Laser(pointing=[(1, 1.), (2, 1.)])\n",
     "chain = LinearChain(\n",
-    "        ions=[C, C], com_frequencies=(x=3e6,y=3e6,z=1e6), \n",
-    "        vibrational_modes=(x=[1], z=[1])\n",
+    "        ions=[ca, ca],\n",
+    "        comfrequencies=(x=3e6,y=3e6,z=1e6), \n",
+    "        selectedmodes=(x=[1], z=[1]),\n",
+    "        N=5 # Set Hilbert space dimension for participating vibrational modes\n",
     "    )\n",
-    "T = Trap(configuration=chain, B=6e-4, Bhat=(x̂ + ẑ)/√2, lasers=[L1, L2])\n",
+    "chamber = Chamber(iontrap=chain, B=6e-4, Bhat=(x̂ + ẑ)/√2, lasers=[laser1, laser2])\n",
     "\n",
-    "axial_mode = T.configuration.vibrational_modes.z[1]\n",
-    "radial_mode = T.configuration.vibrational_modes.x[1]\n",
-    "\n",
-    "# Set Hilbert space dimension for participating vibrational modes\n",
-    "axial_mode.N = 5\n",
-    "radial_mode.N = 5;"
+    "axial_mode = zmodes(chamber)[1]\n",
+    "radial_mode = xmodes(chamber)[1];"
    ]
   },
   {
@@ -184,29 +171,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
     "ϵ = 40e3\n",
+    "ν_axial = frequency(axial_mode)\n",
     "\n",
-    "L1.λ = transitionwavelength(C, (\"S\", \"D\"), T)\n",
-    "L1.Δ = axial_mode.ν + ϵ \n",
-    "L1.k = ẑ\n",
-    "L1.ϵ = x̂\n",
+    "wavelength_from_transition!(laser1, ca, (\"S\", \"D\"), chamber)\n",
+    "detuning!(laser1, ν_axial + ϵ)\n",
+    "polarization!(laser1, x̂)\n",
+    "wavevector!(laser1, ẑ)\n",
     "\n",
-    "L2.λ = transitionwavelength(C, (\"S\", \"D\"), T)\n",
-    "L2.Δ = -axial_mode.ν - ϵ\n",
-    "L2.k = ẑ\n",
-    "L2.ϵ = x̂\n",
+    "wavelength_from_transition!(laser2, ca, (\"S\", \"D\"), chamber)\n",
+    "detuning!(laser2, -ν_axial - ϵ)\n",
+    "polarization!(laser2, x̂)\n",
+    "wavevector!(laser2, ẑ)\n",
     "\n",
-    "η = abs(get_η(axial_mode, L1, C))\n",
+    "η = abs(lambdicke(axial_mode, ca, laser1))\n",
     "Ω = √(1e3 * ϵ) / η  # This will give a 1kHz MS strength, since coupling goes like (ηΩ)^2/ϵ\n",
     "\n",
-    "Efield_from_rabi_frequency!(Ω, T, 1, 1, (\"S\", \"D\"))\n",
-    "Efield_from_rabi_frequency!(Ω, T, 2, 1, (\"S\", \"D\"));"
+    "intensity_from_rabifrequency!(1, Ω, 1, (\"S\", \"D\"), chamber)\n",
+    "intensity_from_rabifrequency!(2, Ω, 1, (\"S\", \"D\"), chamber);"
    ]
   },
   {
@@ -220,35 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "Collapsed": "false",
-    "tags": [
-     "remove-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "h = hamiltonian(T, lamb_dicke_order=1, rwa_cutoff=1e6);\n",
-    "tout, sol_res = timeevolution.schroedinger_dynamic(\n",
-    "        0:2:3000, C[\"D\"] ⊗ C[\"S\"] ⊗ axial_mode[0] ⊗ radial_mode[0], h\n",
-    "    );"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "h = hamiltonian(T, lamb_dicke_order=1, rwa_cutoff=1e6);"
+    "h = hamiltonian(chamber, timescale=1e-6, lamb_dicke_order=1, rwa_cutoff=1e6);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "Collapsed": "false"
    },
@@ -257,13 +228,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.933074 seconds (8.95 M allocations: 237.712 MiB, 11.20% gc time)\n"
+      " 44.166616 seconds (49.34 M allocations: 3.305 GiB, 3.95% gc time, 0.94% compilation time)\n"
      ]
     }
    ],
    "source": [
     "@time tout, sol_res = timeevolution.schroedinger_dynamic(\n",
-    "        0:2:3000, C[\"D\"] ⊗ C[\"S\"] ⊗ axial_mode[0] ⊗ radial_mode[0], h\n",
+    "        0:2:3000, ca[\"D\"] ⊗ ca[\"S\"] ⊗ axial_mode[0] ⊗ radial_mode[0], h\n",
     "    );"
    ]
   },
@@ -278,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "Collapsed": "false"
    },
@@ -305,7 +276,7 @@
     }
    ],
    "source": [
-    "SD_res = expect(ionprojector(T, \"S\", \"D\"), sol_res)\n",
+    "SD_res = expect(ionprojector(chamber, \"S\", \"D\"), sol_res)\n",
     "plt.plot(tout, SD_res, label=\"resonant\")\n",
     "plt.xlim(tout[1], tout[end])\n",
     "plt.ylim(0, 1)\n",
@@ -343,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "Collapsed": "false"
    },
@@ -351,7 +322,7 @@
    "source": [
     "# We'll add the barrier term by setting a nonzero value to \n",
     "# the trap's B-field gradient:\n",
-    "set_gradient!(T, (1, 2), (\"S\", \"D\"), √5.25 * 1e3); \n",
+    "bgradient!(chamber, (1, 2), (\"S\", \"D\"), √5.25 * 1e3); \n",
     "# ΩMS = 1 kHz, so setting Δ = √5.25 kHz gives Ω' = √(ΩMS^2 + Δ^2) = 2.5 kHz"
    ]
   },
@@ -366,18 +337,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "h = hamiltonian(T, lamb_dicke_order=1, rwa_cutoff=1e6);"
+    "h = hamiltonian(chamber, timescale=1e-6, lamb_dicke_order=1, rwa_cutoff=1e6);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "Collapsed": "false"
    },
@@ -386,14 +357,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.848241 seconds (8.67 M allocations: 230.461 MiB, 13.55% gc time)\n"
+      "  1.505231 seconds (8.67 M allocations: 230.449 MiB, 12.53% gc time)\n"
      ]
     }
    ],
    "source": [
     "@time tout, sol_det = timeevolution.schroedinger_dynamic(\n",
     "        0:2:3000, \n",
-    "        C[\"D\"] ⊗ C[\"S\"] ⊗ axial_mode[0] ⊗ radial_mode[0], h\n",
+    "        ca[\"D\"] ⊗ ca[\"S\"] ⊗ axial_mode[0] ⊗ radial_mode[0], h\n",
     "    );"
    ]
   },
@@ -408,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "Collapsed": "false"
    },
@@ -425,7 +396,7 @@
     }
    ],
    "source": [
-    "SD_det = expect(ionprojector(T, \"S\", \"D\"), sol_det)\n",
+    "SD_det = expect(ionprojector(chamber, \"S\", \"D\"), sol_det)\n",
     "plt.plot(tout, SD_res, label=\"resonant\")\n",
     "plt.plot(tout, SD_det, label=\"detuned\")\n",
     "plt.xlim(tout[1], tout[end])\n",
@@ -480,15 +451,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "L3 = Laser(pointing=[(2, 1.)])\n",
-    "L4 = Laser(pointing=[(2, 1.)])\n",
-    "T.lasers = [L1, L2, L3, L4];"
+    "laser3 = Laser(pointing=[(2, 1.)])\n",
+    "laser4 = Laser(pointing=[(2, 1.)])\n",
+    "lasers!(chamber, [laser1, laser2, laser3, laser4]);"
    ]
   },
   {
@@ -502,34 +473,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "axial_mode = T.configuration.vibrational_modes.z[1]\n",
-    "radial_mode = T.configuration.vibrational_modes.x[1]\n",
+    "axial_mode = zmodes(chamber)[1]\n",
+    "radial_mode = xmodes(chamber)[1]\n",
+    "ν_radial = frequency(radial_mode)\n",
     "\n",
     "νeff = √5.25 * 1e3\n",
     "\n",
     "# We set the effective vibrational frequency by detuning \n",
     "# the 2-photon transition off resonance\n",
-    "L3.λ = transitionwavelength(C, (\"S\", \"D\"), T)\n",
-    "L3.Δ = radial_mode.ν / 2 + νeff  \n",
-    "L3.k = x̂\n",
-    "L3.ϵ = ẑ\n",
+    "wavelength_from_transition!(laser3, ca, (\"S\", \"D\"), chamber)\n",
+    "detuning!(laser3, ν_radial / 2 + νeff)\n",
+    "polarization!(laser3, ẑ)\n",
+    "wavevector!(laser3, x̂)\n",
     "\n",
-    "L4.λ = transitionwavelength(C, (\"S\", \"D\"), T)\n",
-    "L4.Δ = - radial_mode.ν / 2\n",
-    "L4.k = x̂\n",
-    "L4.ϵ = ẑ\n",
+    "wavelength_from_transition!(laser4, ca, (\"S\", \"D\"), chamber)\n",
+    "detuning!(laser4, -ν_radial / 2)\n",
+    "polarization!(laser4, ẑ)\n",
+    "wavevector!(laser4, x̂)\n",
     "\n",
-    "η = abs(get_η(radial_mode, L3, C))\n",
-    "Ω = √((0.5e3 * radial_mode.ν) / η)  # Set κ = 0.5 kHz, since κ = ηΩ^2/ν\n",
+    "η = abs(lambdicke(radial_mode, ca, laser3))\n",
+    "Ω = √((0.5e3 * ν_radial) / η)  # Set κ = 0.5 kHz, since κ = ηΩ^2/ν\n",
     "\n",
-    "Efield_from_rabi_frequency!(Ω, T, 3, 2, (\"S\", \"D\"))\n",
-    "Efield_from_rabi_frequency!(Ω, T, 4, 2, (\"S\", \"D\"));"
+    "intensity_from_rabifrequency!(3, Ω, 2, (\"S\", \"D\"), chamber)\n",
+    "intensity_from_rabifrequency!(4, Ω, 2, (\"S\", \"D\"), chamber);"
    ]
   },
   {
@@ -544,18 +516,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "h = hamiltonian(T, lamb_dicke_order=1, rwa_cutoff=1.51e6);"
+    "h = hamiltonian(chamber, timescale=1e-6, lamb_dicke_order=1, rwa_cutoff=1.51e6);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {
     "Collapsed": "false"
    },
@@ -564,14 +536,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "112.828086 seconds (730.03 M allocations: 23.473 GiB, 9.78% gc time, 0.05% compilation time)\n"
+      " 87.876709 seconds (730.03 M allocations: 23.473 GiB, 9.04% gc time, 0.05% compilation time)\n"
      ]
     }
    ],
    "source": [
     "@time tout, sol_vaet = timeevolution.schroedinger_dynamic(\n",
     "        0:2:3000, \n",
-    "        C[\"D\"] ⊗ C[\"S\"] ⊗ axial_mode[0] ⊗ radial_mode[0], h\n",
+    "        ca[\"D\"] ⊗ ca[\"S\"] ⊗ axial_mode[0] ⊗ radial_mode[0], h\n",
     "    );"
    ]
   },
@@ -586,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {
     "Collapsed": "false"
    },
@@ -603,7 +575,7 @@
     }
    ],
    "source": [
-    "SD_vaet = expect(ionprojector(T, \"S\", \"D\"), sol_vaet)\n",
+    "SD_vaet = expect(ionprojector(chamber, \"S\", \"D\"), sol_vaet)\n",
     "plt.plot(tout, SD_res, label=\"resonant\")\n",
     "plt.plot(tout, SD_det, label=\"detuned\")\n",
     "plt.plot(tout, SD_vaet, label=\"VAET\")\n",
