--- a/_sources/example-notebooks/multi-mode_interactions.ipynb
+++ b/_sources/example-notebooks/multi-mode_interactions.ipynb
@@ -20,7 +20,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `~/.julia/registries/General`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
       "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Project.toml`\n",
       "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/.julia/environments/v1.6/Manifest.toml`\n",
@@ -110,37 +109,26 @@
    "metadata": {
     "Collapsed": "false"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Warning: !(ϵ ⟂ k)\n",
-      "└ @ IonSim /home/neil/.julia/dev/IonSim/src/lasers.jl:85\n",
-      "┌ Warning: !(ϵ ⟂ k)\n",
-      "└ @ IonSim /home/neil/.julia/dev/IonSim/src/lasers.jl:80\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup system\n",
-    "C = Ca40([(\"S1/2\", -1/2), (\"D5/2\", -1/2)])\n",
-    "set_sublevel_alias!(C, Dict(\"S\" => (\"S1/2\", -1/2),\n",
-    "                            \"D\" => (\"D5/2\", -1/2)))\n",
-    "L = Laser()\n",
+    "ca = Ca40([(\"S1/2\", -1/2, \"S\"), (\"D5/2\", -1/2, \"D\")])\n",
+    "laser = Laser()\n",
     "νᵣ = √14 * 1e6  # radial trap frequency\n",
     "νₐ = 1.5e6  # axial trap frequency\n",
     "chain = LinearChain(\n",
-    "        ions=[C], com_frequencies=(x=νᵣ, y=νᵣ, z=νₐ), \n",
-    "        vibrational_modes=(x=[1], z=[1])\n",
+    "        ions=[ca],\n",
+    "        comfrequencies=(x=νᵣ, y=νᵣ, z=νₐ), \n",
+    "        selectedmodes=(x=[1], z=[1]),\n",
+    "        N = 8\n",
     "    )\n",
-    "T = Trap(configuration=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[L])\n",
+    "chamber = Chamber(iontrap=chain, B=4e-4, Bhat=ẑ, δB=0, lasers=[laser])\n",
     "# set laser parameters\n",
-    "L.k = (x̂ + ẑ)/√2\n",
-    "L.ϵ = ẑ\n",
-    "L.λ = transitionwavelength(C, (\"S\", \"D\"), T)\n",
+    "wavelength_from_transition!(laser, ca, (\"S\", \"D\"), chamber)\n",
+    "polarization!(laser, ẑ)\n",
+    "wavevector!(laser, (x̂ + ẑ)/√2)\n",
     "# set carrier transition Rabi frequency to 500 kHz\n",
-    "Efield_from_rabi_frequency!(5e5, T, 1, 1, (\"S\", \"D\"));"
+    "intensity_from_rabifrequency!(1, 5e5, 1, (\"S\", \"D\"), chamber);"
    ]
   },
   {
@@ -151,13 +139,10 @@
    },
    "outputs": [],
    "source": [
-    "axial = T.configuration.vibrational_modes.z[1]\n",
-    "radial = T.configuration.vibrational_modes.x[1]\n",
+    "axial = zmodes(chamber)[1]\n",
+    "radial = xmodes(chamber)[1]\n",
     "\n",
-    "# set vibrational mode Hilbert space dimensions\n",
-    "axial.N = 8; radial.N = 8  \n",
-    "\n",
-    "ρᵢ_ion = dm(C[\"S\"])\n",
+    "ρᵢ_ion = dm(ca[\"S\"])\n",
     "ρᵢ_axial = thermalstate(axial, 0.5)\n",
     "ρᵢ_radial = thermalstate(radial, 0.5)\n",
     "# Set initial state to ρᵢ = |↓, n̄ᵣ=0.5, n̄ₐ=0.5⟩\n",
@@ -193,16 +178,16 @@
    "outputs": [],
    "source": [
     "tspan = 0:10:400\n",
-    "fout(t, ρ) = real(expect(ionprojector(T, \"D\"), ρ))\n",
-    "J = (-dm(C[\"S\"]) + dm(C[\"D\"])) ⊗ one(radial) ⊗ one(axial)  # Collapse operator\n",
+    "fout(t, ρ) = real(expect(ionprojector(chamber, \"D\"), ρ))\n",
+    "J = (-dm(ca[\"S\"]) + dm(ca[\"D\"])) ⊗ one(radial) ⊗ one(axial)  # Collapse operator\n",
     "γ = 1e4 * 1e-6 \n",
     "\n",
     "# Scan laser detuning\n",
     "Δlist = range(νₐ, stop=2νᵣ + 1e5, length=300)\n",
     "exclist = []\n",
     "for Δ in Δlist\n",
-    "    L.Δ = Δ\n",
-    "    h = hamiltonian(T, rwa_cutoff=1.5e6, lamb_dicke_order=2)\n",
+    "    detuning!(laser, Δ)\n",
+    "    h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1.5e6, lamb_dicke_order=2)\n",
     "    _, sol = timeevolution.master_dynamic(tspan, ρᵢ, (t, ρ) -> (h(t, ρ), [J], [J], [γ]), fout=fout)\n",
     "    push!(exclist, real(sol[end]))\n",
     "end "
@@ -278,12 +263,13 @@
    "outputs": [],
    "source": [
     "# set carrier transition Rabi frequency to 1 MHz\n",
-    "Efield_from_rabi_frequency!(1e6, T, 1, 1, (\"S\",\"D\"))\n",
+    "intensity_from_rabifrequency!(1, 1e6, 1, (\"S\", \"D\"), chamber)\n",
+    "detuning!(laser, frequency(axial))\n",
+    "modecutoff!(axial, 10)\n",
+    "modecutoff!(radial, 10)\n",
+    "\n",
+    "h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1e4, displacement=\"truncated\", time_dependent_eta=false)\n",
     "tspan = 0:0.25:800\n",
-    "L.Δ = axial.ν\n",
-    "axial.N = 10\n",
-    "radial.N = 10\n",
-    "h = hamiltonian(T, rwa_cutoff=1e4, displacement=\"truncated\", time_dependent_eta=false)\n",
     "\n",
     "# Set initial state to |↓, n̄ᵣ=0, n̄ₐ=1.5⟩ and solve\n",
     "ρᵢ_axial = thermalstate(axial, 1.5)\n",
@@ -318,7 +304,7 @@
    ],
    "source": [
     "plt.plot(tout, sol_ax, label=\"n̄_axial=1.5, n̄_radial=0\")\n",
-    "plt.plot(tout, analytical.rabi_flop.(tout, 1, get_η(axial, L, C), 1.5, s=1), ls=\"dotted\", label=\"n̄_axial=1.5, n̄_radial=0 (theoretical)\")\n",
+    "plt.plot(tout, analytical.rabiflop.(tout, 1, lambdicke(axial, ca, laser), 1.5, s=1), ls=\"dotted\", label=\"n̄_axial=1.5, n̄_radial=0 (theoretical)\")\n",
     "plt.plot(tout, sol_rad, alpha=0.5, label=\"n̄_axial=0, n̄_radial=1.5\", zorder=-1)\n",
     "plt.legend(loc=4, framealpha=1)\n",
     "plt.ylim(0, 1)\n",
@@ -349,8 +335,8 @@
    "outputs": [],
    "source": [
     "tspan = 0:0.25:800\n",
-    "L.Δ = radial.ν\n",
-    "h = hamiltonian(T, rwa_cutoff=1e4)\n",
+    "detuning!(laser, frequency(radial))\n",
+    "h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1e4)\n",
     "\n",
     "# Set initial state to |↓, n̄ᵣ=0, n̄ₐ=1.5⟩ and solve\n",
     "ρᵢ_axial = thermalstate(axial, 1.5)\n",
@@ -385,7 +371,7 @@
    ],
    "source": [
     "plt.plot(tout, sol_rad, label=\"n̄_axial=0, n̄_radial=1.5\")\n",
-    "plt.plot(tout, analytical.rabi_flop.(tout, 1, get_η(radial, L, C), 1.5, s=1), ls=\"dotted\", label=\"n̄_axial=0, n̄_radial=1.5 (theoretical)\")\n",
+    "plt.plot(tout, analytical.rabiflop.(tout, 1, lambdicke(radial, ca, laser), 1.5, s=1), ls=\"dotted\", label=\"n̄_axial=0, n̄_radial=1.5 (theoretical)\")\n",
     "plt.plot(tout, sol_ax, alpha=0.5, label=\"n̄_axial=1.5, n̄_radial=0\", zorder=-1)\n",
     "plt.legend(loc=4, framealpha=1)\n",
     "plt.ylim(0, 1)\n",
@@ -423,28 +409,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
-    "fout(t, ρ) = real(expect(ionprojector(T, \"D\"), ρ));"
+    "fout(t, ρ) = real(expect(ionprojector(chamber, \"D\"), ρ));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "Collapsed": "false"
    },
    "outputs": [],
    "source": [
     "tspan = 0:1:10000\n",
-    "axial.N = 15\n",
-    "radial.N = 15\n",
-    "L.Δ = radial.ν + axial.ν\n",
-    "h = hamiltonian(T, rwa_cutoff=1e4)\n",
+    "modecutoff!(axial, 15)\n",
+    "modecutoff!(radial, 15)\n",
+    "detuning!(laser, frequency(radial) + frequency(axial))\n",
+    "h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1e4)\n",
     "\n",
     "# Set initial state to |↓, n̄ᵣ=0, n̄ₐ=1.5⟩\n",
     "ρᵢ_axial = thermalstate(axial, 1.5)\n",
@@ -467,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "Collapsed": "false"
    },
@@ -507,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "Collapsed": "false"
    },
@@ -524,8 +510,8 @@
     }
    ],
    "source": [
-    "ηᵣ = get_η(radial, L, C)\n",
-    "ηₐ = get_η(axial, L, C)\n",
+    "ηᵣ = lambdicke(radial, ca, laser)\n",
+    "ηₐ = lambdicke(axial, ca, laser)\n",
     "η2 = ηᵣ * ηₐ\n",
     "P(n1, n2; n̄₁=1.5, n̄₂=1.5) =  n̄₁^n1 * n̄₂^n2 / ((n̄₁ + 1)^(n1 + 1) * (n̄₂ + 1)^(n2 + 1))\n",
     "sample_rate = (length(tout) - 1) / tout[end]\n",
@@ -593,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {
     "Collapsed": "false"
    },
@@ -604,34 +590,34 @@
     "ρᵢ_radial = thermalstate(radial, 0)\n",
     "ρᵢ = ρᵢ_ion ⊗ ρᵢ_radial ⊗ ρᵢ_axial  # Set initial state to |↓, n̄ᵣ=0, n̄ₐ=0⟩\n",
     "\n",
-    "L.Δ = 2radial.ν  # Set detuning to second order radial sideband\n",
-    "h = hamiltonian(T, rwa_cutoff=1e4, lamb_dicke_order=[1, 2])  # First order LD approx on radial mode and second order on axial mode\n",
+    "detuning!(laser, 2*frequency(radial))  # Set detuning to second order radial sideband\n",
+    "h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1e4, lamb_dicke_order=[1, 2])  # First order LD approx on radial mode and second order on axial mode\n",
     "tout, sol_rad = timeevolution.schroedinger_dynamic(tspan, ρᵢ, h, fout=fout)\n",
     "\n",
-    "L.Δ = 2axial.ν  # Set detuning to second order axial sideband\n",
-    "h = hamiltonian(T, rwa_cutoff=1e4, lamb_dicke_order=[1, 2])\n",
+    "detuning!(laser, 2*frequency(axial))  # Set detuning to second order axial sideband\n",
+    "h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1e4, lamb_dicke_order=[1, 2])\n",
     "tout, sol_ax = timeevolution.schroedinger_dynamic(tspan, ρᵢ, h, fout=fout)\n",
     "\n",
-    "L.Δ = radial.ν + axial.ν  # Set detuning to axial + radial sideband\n",
-    "h = hamiltonian(T, rwa_cutoff=1e4, lamb_dicke_order=[1, 2])\n",
+    "detuning!(laser, frequency(radial) + frequency(axial))  # Set detuning to axial + radial sideband\n",
+    "h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1e4, lamb_dicke_order=[1, 2])\n",
     "tout, sol_rad_ax = timeevolution.schroedinger_dynamic(tspan, ρᵢ, h, fout=fout)\n",
     "\n",
-    "L.Δ = 2radial.ν  # Set detuning to second order radial sideband\n",
-    "h = hamiltonian(T, rwa_cutoff=1e4, lamb_dicke_order=[2, 1])  # First order LD approx on radial mode and second order on axial mode\n",
+    "detuning!(laser, 2*frequency(radial))  # Set detuning to second order radial sideband\n",
+    "h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1e4, lamb_dicke_order=[2, 1])  # First order LD approx on radial mode and second order on axial mode\n",
     "tout, sol_radr = timeevolution.schroedinger_dynamic(tspan, ρᵢ, h, fout=fout)\n",
     "\n",
-    "L.Δ = 2axial.ν  # Set detuning to second order axial sideband\n",
-    "h = hamiltonian(T, rwa_cutoff=1e4, lamb_dicke_order=[2, 1])\n",
+    "detuning!(laser, 2*frequency(axial))  # Set detuning to second order axial sideband\n",
+    "h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1e4, lamb_dicke_order=[2, 1])\n",
     "tout, sol_axr = timeevolution.schroedinger_dynamic(tspan, ρᵢ, h, fout=fout)\n",
     "\n",
-    "L.Δ = radial.ν + axial.ν  # Set detuning to axial + radial sideband\n",
-    "h = hamiltonian(T, rwa_cutoff=1e4, lamb_dicke_order=[2, 1])\n",
+    "detuning!(laser, frequency(radial) + frequency(axial))  # Set detuning to axial + radial sideband\n",
+    "h = hamiltonian(chamber, timescale=1e-6, rwa_cutoff=1e4, lamb_dicke_order=[2, 1])\n",
     "tout, sol_rad_axr = timeevolution.schroedinger_dynamic(tspan, ρᵢ, h, fout=fout);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "Collapsed": "false"
    },
