new figure for media and changed getting started name to tutorial

--- a/webpage/tutorial-notebooks/Tutorial.ipynb
+++ b/webpage/tutorial-notebooks/Tutorial.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "Collapsed": "false"
    },
    "source": [
-    "# Getting started with IonSim"
+    "# Ionsim Tutorial"
    ]
   },
   {
@@ -3413,9 +3414,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.3",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
