--- a/webpage/tutorial-notebooks/Installation.ipynb
+++ b/webpage/tutorial-notebooks/Installation.ipynb
@@ -8,10 +8,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you haven't done so already, download Julia (platform specific instructions can be found here). Next, open the Julia app, which should launch a REPL session, and install IonSim using the following commands:"
+    "If you haven't done so already, download [Julia](https://julialang.org) (platform specific instructions can be found [here](https://julialang.org/downloads/)). Next, open the Julia app, which should launch a [REPL](https://docs.julialang.org/en/v1/stdlib/REPL/#The-Julia-REPL-1) session, and install IonSim using the following commands:"
    ]
   },
   {
@@ -25,10 +26,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The main way you'll want to interact with IonSim is inside of a Jupyter notebook. This requires IJulia.jl:"
+    "The main way you'll want to interact with IonSim is inside of a [Jupyter notebook](https://jupyter.org/). This requires [IJulia.jl](https://github.com/JuliaLang/IJulia.jl):"
    ]
   },
   {
@@ -41,10 +43,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And finally, if you'd like to follow along with the example notebooks, you'll need at least PyPlot.jl, an interface to Python's Matplotlib library:"
+    "And finally, if you'd like to follow along with the example notebooks, you'll need at least [PyPlot.jl](https://github.com/JuliaPy/PyPlot.jl), an interface to Python's [Matplotlib](https://matplotlib.org/) library:"
    ]
   },
   {
@@ -70,6 +73,14 @@
    "outputs": [],
    "source": [
     "Pkg.update(\"IonSim\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Release Notes: See our release notes on [GitHub](https://github.com/HaeffnerLab/IonSim.jl/releases)."
    ]
   }
  ],
